--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,14 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+		<!-- versions -->
+		<zdp.version>1.0</zdp.version>
+		<spring.version>5.0.6.RELEASE</spring.version>
+		<activemq.version>5.15.3</activemq.version>
+		<netty.version>4.1.24.Final</netty.version>
+		<guava.version>25.0-jre</guava.version>
+		<jackson.version>2.9.5</jackson.version>
 	</properties>
 
 	<build>
@@ -24,19 +32,31 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
-			<version>5.0.6.RELEASE</version>
+			<version>${spring.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jms</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jackson.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.activemq</groupId>
 			<artifactId>activemq-broker</artifactId>
-			<version>5.15.3</version>
+			<version>${activemq.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-all</artifactId>
-			<version>4.1.24.Final</version>
+			<version>${netty.version}</version>
 		</dependency>
 
 		<dependency>
@@ -66,13 +86,13 @@
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>25.0-jre</version>
+			<version>${guava.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>io.zdp</groupId>
 			<artifactId>io.zdp.api.model</artifactId>
-			<version>1.0</version>
+			<version>${zdp.version}</version>
 		</dependency>
 	</dependencies>
 
