--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,7 @@
-<project
-	xmlns="http://maven.apache.org/POM/4.0.0"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
->
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.zdp</groupId>
 	<artifactId>io.zdp.node</artifactId>
@@ -10,17 +9,20 @@
 	<name>ZDP Node</name>
 
 	<properties>
+
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
 		<!-- versions -->
 		<zdp.version>1.0</zdp.version>
-		<spring.version>5.0.6.RELEASE</spring.version>
+		<spring.version>5.0.5.RELEASE</spring.version>
+		<spring.data.version>2.0.6.RELEASE</spring.data.version>
 		<activemq.version>5.15.3</activemq.version>
 		<netty.version>4.1.24.Final</netty.version>
 		<guava.version>25.0-jre</guava.version>
 		<jackson.version>2.9.5</jackson.version>
+		<hibernate.version>5.2.17.Final</hibernate.version>
 	</properties>
 
 	<build>
@@ -28,18 +30,6 @@
 	</build>
 
 	<dependencies>
-
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-jms</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
 
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
@@ -90,10 +80,35 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.4.197</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.mchange</groupId>
+			<artifactId>c3p0</artifactId>
+			<version>0.9.5.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-jpa</artifactId>
+			<version>${spring.data.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>${hibernate.version}</version>
+		</dependency>
+
+		<dependency>
 			<groupId>io.zdp</groupId>
 			<artifactId>io.zdp.api.model</artifactId>
 			<version>${zdp.version}</version>
 		</dependency>
+
 	</dependencies>
 
 </project>
