--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 		<!-- versions -->
 		<zdp.version>1.0</zdp.version>
 		<spring.version>5.0.5.RELEASE</spring.version>
+		<spring.integration.version>5.0.4.RELEASE</spring.integration.version>
 		<spring.data.version>2.0.6.RELEASE</spring.data.version>
 		<activemq.version>5.15.3</activemq.version>
 		<netty.version>4.1.24.Final</netty.version>
@@ -113,6 +114,12 @@
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-jpa</artifactId>
 			<version>${spring.data.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.integration</groupId>
+			<artifactId>spring-integration-ip</artifactId>
+			<version>${spring.integration.version}</version>
 		</dependency>
 
 		<dependency>
