--- a/src/main/resources/io/zdp/node/app.properties
+++ b/src/main/resources/io/zdp/node/app.properties
@@ -8,3 +8,7 @@ hibernate.dialect=org.hibernate.dialect.H2Dialect
 jdbc.min.pool.size=0
 jdbc.max.pool.size=64
 jdbc.max.idle.time=3600
+
+# tcp server
+local.node.tcp.server.host=localhost
+local.node.tcp.server.port=9005
