--- a/src/main/resources/io/zdp/node/app.properties
+++ b/src/main/resources/io/zdp/node/app.properties
@@ -1,13 +1,13 @@
-jdbc.driver=org.h2.Driver
-jdbc.url=jdbc:h2:${user.home}/.zdp/data/zdp
-jdbc.user=zdp
-jdbc.password=zdp
-hibernate.dialect=org.hibernate.dialect.H2Dialect
+accounts.jdbc.driver=org.h2.Driver
+accounts.jdbc.url=jdbc:h2:${user.home}/.zdp/data/accounts
+accounts.jdbc.user=zdp
+accounts.jdbc.password=zdp
+accounts.jdbc.dialect=org.hibernate.dialect.H2Dialect
 
 # http://www.mchange.com/projects/c3p0/
-jdbc.min.pool.size=0
-jdbc.max.pool.size=64
-jdbc.max.idle.time=3600
+accounts.jdbc.min.pool.size=0
+accounts.jdbc.max.pool.size=64
+accounts.jdbc.max.idle.time=3600
 
 # tcp server
 local.node.tcp.server.host=localhost
