--- a/src/main/resources/io/zdp/node/app.properties
+++ b/src/main/resources/io/zdp/node/app.properties
@@ -1,13 +1,25 @@
+# Accounts database
 accounts.jdbc.driver=org.h2.Driver
 accounts.jdbc.url=jdbc:h2:${user.home}/.zdp/data/accounts
 accounts.jdbc.user=zdp
 accounts.jdbc.password=zdp
 accounts.jdbc.dialect=org.hibernate.dialect.H2Dialect
 
-# http://www.mchange.com/projects/c3p0/
 accounts.jdbc.min.pool.size=0
 accounts.jdbc.max.pool.size=64
 accounts.jdbc.max.idle.time=3600
+
+# Transfer headers database
+transfers.jdbc.driver=org.h2.Driver
+transfers.jdbc.url=jdbc:h2:${user.home}/.zdp/data/transfers
+transfers.jdbc.user=zdp
+transfers.jdbc.password=zdp
+transfers.jdbc.dialect=org.hibernate.dialect.H2Dialect
+
+transfers.jdbc.min.pool.size=0
+transfers.jdbc.max.pool.size=64
+transfers.jdbc.max.idle.time=3600
+
 
 # tcp server
 local.node.tcp.server.host=localhost
