--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
+<project
+	xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+>
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.zdp</groupId>
@@ -20,7 +22,6 @@
 		<spring.integration.version>5.0.4.RELEASE</spring.integration.version>
 		<spring.data.version>2.0.6.RELEASE</spring.data.version>
 		<activemq.version>5.15.3</activemq.version>
-		<netty.version>4.1.24.Final</netty.version>
 		<guava.version>25.0-jre</guava.version>
 		<jackson.version>2.9.5</jackson.version>
 		<hibernate.version>5.2.17.Final</hibernate.version>
@@ -54,12 +55,6 @@
 			<groupId>org.apache.activemq</groupId>
 			<artifactId>activemq-broker</artifactId>
 			<version>${activemq.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>io.netty</groupId>
-			<artifactId>netty-all</artifactId>
-			<version>${netty.version}</version>
 		</dependency>
 
 		<dependency>
@@ -119,6 +114,12 @@
 		<dependency>
 			<groupId>org.springframework.integration</groupId>
 			<artifactId>spring-integration-ip</artifactId>
+			<version>${spring.integration.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.integration</groupId>
+			<artifactId>spring-integration-jms</artifactId>
 			<version>${spring.integration.version}</version>
 		</dependency>
 
