--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
 		<guava.version>25.0-jre</guava.version>
 		<jackson.version>2.9.5</jackson.version>
 		<hibernate.version>5.2.17.Final</hibernate.version>
+		<apache.http.client>4.1.3</apache.http.client>
+		<jetty.version>9.4.10.v20180503</jetty.version>
 	</properties>
 
 	<build>
@@ -40,9 +42,21 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpasyncclient</artifactId>
+			<version>${apache.http.client}</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-webapp</artifactId>
-			<version>9.4.10.v20180503</version>
+			<version>${jetty.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-jmx</artifactId>
+			<version>${jetty.version}</version>
 		</dependency>
 
 		<dependency>
@@ -134,6 +148,12 @@
 			<artifactId>io.zdp.api.model</artifactId>
 			<version>${zdp.version}</version>
 		</dependency>
+
+<dependency>
+    <groupId>org.bouncycastle</groupId>
+    <artifactId>bcpkix-jdk14</artifactId>
+    <version>1.59</version>
+</dependency>
 
 	</dependencies>
 
