--- a/pom.xml
+++ b/pom.xml
@@ -125,11 +125,7 @@
 			<version>${spring.data.version}</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.springframework.integration</groupId>
-			<artifactId>spring-integration-ip</artifactId>
-			<version>${spring.integration.version}</version>
-		</dependency>
+		<!-- <dependency> <groupId>org.springframework.integration</groupId> <artifactId>spring-integration-ip</artifactId> <version>${spring.integration.version}</version> </dependency> -->
 
 		<dependency>
 			<groupId>org.springframework.integration</groupId>
@@ -149,11 +145,31 @@
 			<version>${zdp.version}</version>
 		</dependency>
 
-<dependency>
-    <groupId>org.bouncycastle</groupId>
-    <artifactId>bcpkix-jdk14</artifactId>
-    <version>1.59</version>
-</dependency>
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcpkix-jdk14</artifactId>
+			<version>1.59</version>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.jms</groupId>
+			<artifactId>javax.jms-api</artifactId>
+			<version>2.0.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${spring.version}</version>
+			<scope>test</scope>
+		</dependency>
 
 	</dependencies>
 
