--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,8 @@
 		<guava.version>25.0-jre</guava.version>
 		<jackson.version>2.9.5</jackson.version>
 		<hibernate.version>5.2.17.Final</hibernate.version>
-		<apache.http.client>4.1.3</apache.http.client>
 		<jetty.version>9.4.10.v20180503</jetty.version>
+		<apache.http.client>4.5.5</apache.http.client>
 	</properties>
 
 	<build>
@@ -36,15 +36,15 @@
 	<dependencies>
 
 		<dependency>
-			<groupId>net.glxn</groupId>
-			<artifactId>qrgen</artifactId>
-			<version>1.4</version>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>${apache.http.client}</version>
 		</dependency>
 
 		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpasyncclient</artifactId>
-			<version>${apache.http.client}</version>
+			<groupId>net.glxn</groupId>
+			<artifactId>qrgen</artifactId>
+			<version>1.4</version>
 		</dependency>
 
 		<dependency>
@@ -125,7 +125,8 @@
 			<version>${spring.data.version}</version>
 		</dependency>
 
-		<!-- <dependency> <groupId>org.springframework.integration</groupId> <artifactId>spring-integration-ip</artifactId> <version>${spring.integration.version}</version> </dependency> -->
+		<!-- <dependency> <groupId>org.springframework.integration</groupId> <artifactId>spring-integration-ip</artifactId> 
+			<version>${spring.integration.version}</version> </dependency> -->
 
 		<dependency>
 			<groupId>org.springframework.integration</groupId>
