--- a/pom.xml
+++ b/pom.xml
@@ -125,8 +125,7 @@
 			<version>${spring.data.version}</version>
 		</dependency>
 
-		<!-- <dependency> <groupId>org.springframework.integration</groupId> <artifactId>spring-integration-ip</artifactId> 
-			<version>${spring.integration.version}</version> </dependency> -->
+		<!-- <dependency> <groupId>org.springframework.integration</groupId> <artifactId>spring-integration-ip</artifactId> <version>${spring.integration.version}</version> </dependency> -->
 
 		<dependency>
 			<groupId>org.springframework.integration</groupId>
