settlement and failed transfers wip

--- a/src/main/resources/io/zdp/node/app.properties
+++ b/src/main/resources/io/zdp/node/app.properties
@@ -1,6 +1,6 @@
 # Accounts database
 accounts.jdbc.driver=org.h2.Driver
-accounts.jdbc.url=jdbc:h2:${user.home}/.zdp/data/accounts
+accounts.jdbc.url=jdbc:h2:${user.home}/.zdp/data/accounts;DB_CLOSE_ON_EXIT=FALSE
 accounts.jdbc.user=zdp
 accounts.jdbc.password=zdp
 accounts.jdbc.dialect=org.hibernate.dialect.H2Dialect
